--- a/src/panel/panel.html
+++ b/src/panel/panel.html
@@ -32,8 +32,8 @@
             </p>
 
             <div class="row">
-                <button id="btnScan" type="button">Scan conversations</button>
-                <button id="btnDeepScan" type="button">Deep scan (auto-scroll)</button>
+                <button id="btnScan" type="button">List chats (visible)</button>
+                <button id="btnDeepScan" type="button">List all chats (scroll)</button>
                 <button id="btnCancelScan" type="button" hidden>Cancel</button>
                 <span id="status" class="status">Idle</span>
             </div>
